Testing if the p5  code works\!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
-<head>
-
-</head>
-<body>
-Hello world!! Test
-</body>
+<html>
+  <head>
+    <script src="Aux/lib/p5.js"></script>
+  </head>
+  <body>
+  <h2>FOG x Island</h2>
+  <h3>6:08 PM, Friday 09 - 21 - 2018</h3>
+  <div>
+    <script src="Aux/src/drawing.js"></script>
+  </div>
+  </body>
+</html>
