missed a few files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <h2>FOG x Island</h2>
   <h3>6:08 PM, Friday 09 - 21 - 2018</h3>
   <div>
-    <script src="Aux/src/drawing.js"></script>
+    <script src="Aux/src/drawing.mjs"></script>
   </div>
   </body>
 </html>
