--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="Aux/lib/p5.js"></script>
+    <!-- <script src="Aux/src/test.js"></script> -->
+    
+    <script src="Aux/src/Animation.js"></script>
+    <script src="Aux/src/drawing.js"></script>
   </head>
   <body>
+      
   <h2>FOG x Island</h2>
   <h3>6:08 PM, Friday 09 - 21 - 2018</h3>
-  <div>
-    <script src="Aux/src/drawing.mjs"></script>
-  </div>
+  <div id="test"></div>
+  <div id="drawing0"></div>
+  <h2>FOG x Island</h2>
+  <h3>9:22 AM, Monday 09 - 24 - 2018</h3>
+	<div id="drawing1"></div>
   </body>
 </html>
