Additional animation + data for it

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       
   <h2>FOG x Island</h2>
   <h3>6:08 PM, Friday 09 - 21 - 2018</h3>
-  <div id="test"></div>
   <div id="drawing0"></div>
   <h2>FOG x Island</h2>
   <h3>9:22 AM, Monday 09 - 24 - 2018</h3>
 	<div id="drawing1"></div>
+  <h2>FOG x Island</h2>
+  <h3>4:14 PM, Sunday 09 - 30 - 2018</h3>
+	<div id="drawing2"></div>
   </body>
 </html>
