--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Roboto" rel="stylesheet">
+    
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="Aux/lib/p5.js"></script>
     <!-- <script src="Aux/src/test.js"></script> -->
@@ -8,15 +10,40 @@
     <script src="Aux/src/drawing.js"></script>
   </head>
   <body>
-      
-  <h2>FOG x Island</h2>
-  <h3>6:08 PM, Friday 09 - 21 - 2018</h3>
-  <div id="drawing0"></div>
-  <h2>FOG x Island</h2>
-  <h3>9:22 AM, Monday 09 - 24 - 2018</h3>
-	<div id="drawing1"></div>
-  <h2>FOG x Island</h2>
-  <h3>4:14 PM, Sunday 09 - 30 - 2018</h3>
-	<div id="drawing2"></div>
+  <div class="centerCol">
+
+    <!-- Animation 1 -->
+    <div class="animation">
+      <h1 class="site">
+        FOG x Island
+      </h1>
+      <h2 class="dateTime">
+        6:08 PM, Friday 09 - 21 - 2018
+      </h2>
+      <div id="drawing0"></div>
+    </div>
+
+    <!-- Animation 2 -->
+    <div class="animation">
+      <h1 class="site">
+        FOG x Island
+      </h1>
+      <h2 class="dateTime">
+        9:22 AM, Monday 09 - 24 - 2018
+      </h2>
+      <div id="drawing1"></div>
+    </div>
+
+    <!-- Animation 3 -->
+    <div class="animation">
+      <h1 class="site">
+        FOG x Island
+      </h1>
+      <h2 class="dateTime">
+        4:14 PM, Sunday 09 - 30 - 2018
+      </h2>
+      <div id="drawing2"></div>
+    </div>
+  </div>
   </body>
 </html>
