Add and style info page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,38 @@
   <body>
   <div class="centerCol">
 
+    <div class="infoBtn">Info</div>
+    <div class="info">
+      <h2>Fog x Ebb x Flow</h2>
+      <h3> Inspiration </h3>
+      <p>
+        Over the course of several visits to different FOG x FLO installations,
+        I found myself repeatedly drawn to how the ebb and flow of park 
+        visitors was changed, or unchanged, by the presence of the fog. 
+      </p>
+      <p>
+        This flow was particularly fascinating to me at the FOG x Island
+        site, where fog appears every half hour on a fairly heavily trafficked
+        bicycle and pedestrian path. The fog sometimes drew significant
+        attendance due to its accessible location, yet equally often, the fog
+        was ignored by swaths of commuters, joggers, and dog walkers passing by.
+      </p>
+
+      <h3> Guide </h3>
+      <p>
+        I visited FOG x Island on different dates, at different times, and
+        collected data on the people I observed passing through the park over 
+        a fixed length of time. 
+      </p>
+      <p>
+        I recorded each individual's time of arrival, 
+        time of departure, direction, and mode of transportation:  
+        <span style="color:rgb(255, 195, 0)"> walking</span>, 
+        <span style="color:rgb(255, 87, 51)"> running</span>, or 
+        <span style="color:rgb(199, 0, 57)"> cycling</span>. 
+      </p>
+    </div>
+
     <!-- Animation 1 -->
     <div class="animation">
       <h1 class="site">
