--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         time of departure, direction, and mode of transportation:  
         <span style="color:rgb(255, 195, 0)"> walking</span>, 
         <span style="color:rgb(255, 87, 51)"> running</span>, or 
-        <span style="color:rgb(199, 0, 57)"> cycling</span>. 
+        <span style="color:rgb(199, 0, 57)"> cycling</span>. <br>
+        Each dot in these animations represents a single visitor, traveling
+        along their path through the park.
       </p>
     </div>
 
