add fog animation w00ttt

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <p>
         I visited FOG x Island on different dates, at different times, and
         collected data on the people I observed passing through the park over 
-        a fixed length of time. 
+        a period of time. 
       </p>
       <p>
         I recorded each individual's time of arrival, 
